<resources>
    <string name="app_name">UrSkripsi</string>
    <string name="next">Next</string>
    <string name="get_started">Ayo Mulai</string>

    <!--OnBoarding Text-->
    <string name="title1">Atur progressmu!</string>
    <string name="description1">Atur progressmu sehingga lancar dalam mengerjakan skripsimu.</string>
    <string name="title2">Perhatikan waktumu!</string>
    <string name="description2">Selalu perhatikan waktumu dalam pengerjaan skripsimu.</string>
    <string name="title3">Luluslah tepat waktu!</string>
    <string name="description3">Jadikan kegiatan skripsimu lancar hingga tepat di waktu lulusmu.</string>

    <!-- Login Text -->
    <string name="login_image_background">Login Image Background</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ingatkan_saya">Ingatkan saya</string>
    <string name="lupa_password">Lupa kata sandi?</string>
    <string name="atau_masuk_melalui">atau masuk melalui</string>
    <string name="google_icon">Google Icon</string>
    <string name="tidak_memiliki_akun">Tidak memiliki akun?</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="selamat_datang">Selamat Datang 👋</string>
    <string name="buat_akun_baru">Buat Akun Baru</string>
    <string name="invalid_formail_email">Format email salah</string>
    <string name="email_empty">Masukan email</string>
    <string name="password_empty">Masukan password</string>
    <string name="name_empty">Masukan nama lengkap</string>
    <string name="login_success">Login berhasil </string>
    <string name="login_failed">Login tidak berhasil karena %1$s</string>
    <string name="signup_success">Daftar berhasil</string>
    <string name="signup_failed">Daftar tidak berhasil karena %1$s</string>
    <string name="google_new">Akun google dibuat</string>
    <string name="google_exist">LoggedIn</string>

    <!-- Bottom Navigation Text-->
    <string name="home">Home</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="profile">Profile</string>

    <!--Profile Text-->
    <string name="account">Akun</string>
    <string name="change_profile">Ubah profil</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="about">Tentang</string>
    <string name="developer">Pengembang</string>
    <string name="lorem_ipsum_dolor">Lorem ipsum dolor</string>
    <string name="logout">Keluar</string>
    <string name="logout_auth">Keluar dari akun</string>

    <!--Forgot Password-->
    <string name="info_forgot_password">Jangan khawatir itu terjadi. Silakan masukkan alamat yang terkait dengan akun Anda</string>
    <string name="title_forgot_password">Lupa \nKata Sandi?</string>
    <string name="forgot_password">Lupa Kata Sandi</string>
    <string name="send_instruction">Kirim petunjuk</string>
    <string name="email_send_success">Email sudah dikirimkan</string>
    <string name="email_send_failed">Email gagal dikirimkan</string>
    <string name="kembali_ke_halaman_login">Kembali ke halaman login</string>

    <!--Change Password-->
    <string name="old_password">Kata sandi lama</string>
    <string name="new_password">Kata sandi baru</string>
    <string name="confirm_password">Ulangi kata sandi</string>
    <string name="change">Ubah</string>
    <string name="title_change_password">Ubah \nKata Sandi</string>
    <string name="change_password_success">Kata sandi berhasil diubah</string>
    <string name="change_password_failed">Kata sandi gagal diubah karena %1$s</string>
    <string name="password_is_not_the_same">Password tidak sama</string>

    <!--Web Client ID-->
    <string name="web_client_id">default_web_client_id</string>

    <!--Custom Toolbar-->
    <string name="simpan">Simpan</string>

    <!--Change Profile-->
    <string name="ubah_foto">Ubah foto</string>
    <string name="nama_universitas">Nama universitas</string>
    <string name="program_studi">Program studi</string>
    <string name="save_success">Data berhasil disimpan</string>
    <string name="save_failed">Data gagal disimpan</string>

    <!-- Home Fragment Text -->
    <string name="hello">Hello, %1$s</string>
    <string name="yuk_lanjutkan_progress_skripsinya">Yuk! lanjutkan progress skripsinya!</string>
    <string name="progress_skripsimu">Progress skripsimu</string>
    <string name="_0">0</string>
    <string name="percent">%</string>
    <string name="no_task">Belum ada tugas</string>
    <string name="desc_no_task">Tambahkan tugas pertama Anda untuk memulai</string>
    <string name="tambah_baru">Tambah baru</string>
    <string name="in_progress">Sedang dikerjakan</string>
    <string name="buat_task_baru">Buat Task Baru</string>
    <string name="judul">Judul</string>
    <string name="tambah">Tambah</string>
    <string name="deskripsi">deskripsi</string>
    <string name="detail_task">Detail Task</string>
    <string name="hapus">Hapus</string>
    <string name="task_marked_complete">Task marked completed</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="tambahkan_tugas">Buat daftar tugasmu</string>

    <!--Developer-->
    <string name="developer_image_1">https://avatars.githubusercontent.com/u/38599307?v=4</string>
    <string name="developer_name_1">Naufal Abiyyu Mayusuf</string>
    <string name="university_name_developer_1">Universitas Lambung Mangkurat</string>
    <string name="github_developer_1">https://github.com/Naufal0010</string>
    <string name="instagram_developer_1">https://www.instagram.com/naufalabiyyumysf/</string>
    <string name="linkedin_developer_1">https://www.linkedin.com/in/naufal-abiyyu/</string>
    <string name="developer_image_2">https://avatars.githubusercontent.com/u/21984934?v=4</string>
    <string name="developer_name_2">Muhammad Rizqan Fadhil</string>
    <string name="university_name_developer_2">Institut Teknologi Telkom Purwokerto</string>
    <string name="github_developer_2">https://github.com/MhmmdRFadhil</string>
    <string name="instagram_developer_2">https://www.instagram.com/rzqnfdhl/</string>
    <string name="linkedin_developer_2">https://www.linkedin.com/in/rzqnfadhil/</string>
    <string name="ikuti_sosial_media_saya">Ikuti sosial media saya</string>

    <!--Leaderboard-->
    <string name="done">selesai</string>

</resources>