<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/tv_masuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/selamat_datang"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_edittext_white"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="@color/grey_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_masuk" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_edittext_white"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="@color/grey_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_username" />

    <CheckBox
        android:id="@+id/cb_ingatkan_saya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_regular"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/ingatkan_saya"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <TextView
        android:id="@+id/tv_lupa_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/lupa_password"
        android:textColor="@color/primaryDarkColor"
        app:layout_constraintBottom_toBottomOf="@+id/cb_ingatkan_saya"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintTop_toTopOf="@+id/cb_ingatkan_saya" />

    <Button
        android:id="@+id/btn_masuk"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/masuk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_ingatkan_saya" />

    <TextView
        android:id="@+id/tv_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/atau_masuk_melalui"
        android:textColor="@color/grey_text"
        app:layout_constraintEnd_toEndOf="@+id/btn_masuk"
        app:layout_constraintStart_toStartOf="@+id/btn_masuk"
        app:layout_constraintTop_toBottomOf="@+id/btn_masuk" />

    <ImageView
        android:id="@+id/btn_google"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/google_icon"
        android:src="@drawable/ic_google"
        app:layout_constraintEnd_toEndOf="@+id/tv_other"
        app:layout_constraintStart_toStartOf="@+id/tv_other"
        app:layout_constraintTop_toBottomOf="@+id/tv_other" />

    <TextView
        android:id="@+id/tv_tidak_memiliki_akun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/tidak_memiliki_akun"
        android:textColor="@color/grey_text"
        app:layout_constraintEnd_toEndOf="@+id/btn_google"
        app:layout_constraintEnd_toStartOf="@+id/tv_daftar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/btn_masuk"
        app:layout_constraintTop_toBottomOf="@+id/btn_google" />

    <TextView
        android:id="@+id/tv_daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/daftar"
        android:textColor="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="@+id/tv_tidak_memiliki_akun"
        app:layout_constraintEnd_toEndOf="@+id/btn_masuk"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_tidak_memiliki_akun"
        app:layout_constraintTop_toTopOf="@+id/tv_tidak_memiliki_akun" />

</androidx.constraintlayout.widget.ConstraintLayout>